[project]
name = "gfdm-migrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "brotli>=1.1.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click==8.1.7",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "docker-pycreds==0.4.0",
    "einops==0.8.0",
    "ema-pytorch==0.7.7",
    "filelock>=3.18.0",
    "fonttools==4.55.2",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "gdown==5.2.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "kiwisolver==1.4.7",
    "lightning-utilities==0.11.9",
    "markupsafe>=3.0.2",
    "matplotlib==3.9.3",
    "mkl-fft>=1.3.11",
    "mkl-random>=1.2.8",
    "mkl-service==2.4.0",
    "mpmath>=1.3.0",
    "multidict==6.1.0",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "packaging==24.2",
    "pillow>=11.1.0",
    "platformdirs==4.3.6",
    "propcache==0.2.1",
    "protobuf==5.29.1",
    "psutil==6.1.0",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pyparsing==3.2.0",
    "pysocks>=1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scipy==1.14.1",
    "sentry-sdk==2.19.2",
    "setproctitle==1.3.4",
    "setuptools==72.1.0",
    "six==1.17.0",
    "smmap==5.0.1",
    "soupsieve==2.6",
    "sympy==1.13.1",
    "torch==2.5.1",
    "torchmetrics==1.6.0",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "triton==3.1.0",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "wheel==0.44.0",
    "yarl==1.18.3",
]
